@@ -39,7 +39,7 @@ import org.xml.sax.InputSource;
  * @test
  * @bug 4915524
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true dom.Bug4915524
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow dom.Bug4915524
  * @run testng/othervm dom.Bug4915524
  * @summary Test Document.adoptNode() shall not throw Exception when the source document object is created from different implementation.
  */
