@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -35,7 +35,7 @@ import static org.testng.Assert.*;
  * @test
  * @summary Basic test of java.lang.Module
  * @modules java.desktop java.xml
- * @run testng/othervm --illegal-access=deny BasicModuleTest
+ * @run testng/othervm BasicModuleTest
  */
 
 public class BasicModuleTest {
