@@ -31,7 +31,7 @@
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestECDSA
- * @run main/othervm TestECDSA sm policy
+ * @run main/othervm -Djava.security.manager=allow TestECDSA sm policy
  */
 
 import java.security.KeyFactory;
